<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Global Strings -->
    <string name="app_name">GeoTrack</string>
	<string name="title">Title Image</string>
    <string name="title_activity_main">Geo Track</string>
    <string name="title_activity_locationlist">Trackers</string>
    <string name="title_activity_track">Tracking in Progress</string>
    <string name="title_activity_mymap">Mymap</string>

    <!-- Menu Strings -->
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About Us</string>
    <string name="menu_main">Geo Track</string>

    <!-- Splash Strings -->
    <string name="splash_authors">Powered by Ning and Colin</string>

    <!-- Main and About us Strings -->
    <string name="des_interval">Frequency of dropped trackers</string>
    <string name="des_instance">Condition of minimal distance moved</string>
    <string name="main_interval">INTERVAL / SECONDS</string>
    <string name="main_distance">DISTANCE / METERS</string>
    <string name="main_start">START TRACKING</string>
    <string name="main_ning">Ning Liu</string>
    <string name="main_ning_data">Ning Liu,29 years old and comes from China, is currently taking his second year study of a matster degree in Mobile Technology and Business at University of Jyväskylä. He also work as freelancer web designer in free time.</string>
    <string name="main_colin">Colin Jäger</string>
    <string name="main_colin_data">Colin Jäger,2x years old and comes from xxxx, is currently taking his second year study of a xxx degree in Information Technology and Business at University of Jyväskylä.</string>
    <string name="main_contact">Contact Us</string>

    <!-- Track Strings -->
    <string name="track_interval">INTERVAL</string>
    <string name="track_distance">DISTANCE</string>
    <string name="track_start">START</string>
    <string name="track_provider">PROVIDER</string>
    <string name="tmp_interval"></string>
    <string name="tmp_distance"></string>
    <string name="tmp_start"> - </string>
    <string name="tmp_provider"> - </string>
    <string name="track_last_tracker">LAST KNOWN LOCATION</string>
    <string name="track_setup">TRACKER NUMBER</string>
    <string name="track_number_default">0</string>
    <string name="track_last_default_time"> - </string>
    <string name="track_last_default_location">NO TRACKER DROPPED</string>

    <!-- Address Manager Strings -->
    <string name="address_no_match">Can not locate an address for: </string>
    <string name="address_system_error">System error, please contact admin</string>

    <!-- Error Strings -->
    <string name="error_interval">The value of interval can not exceed 100 seconds</string>
    <string name="error_distance">The value of distance can not exceed 1000 meters </string>
    <string name="error_empty">All fields are required to be filled</string>
    <string name="error_empty_tracker">At least one tracker is needed to complete tracking.</string>
    <string name="error_number_exceed">I can not believe you made 100 trackers, we are sorry you can not add anymore! </string>
    <string name="error_mail_empty">Write something before send !</string>
</resources>