<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray" >


<LinearLayout
    
        android:id="@+id/ll_ning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    <TextView
        android:id="@+id/tmp_main_ning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_ning"
        android:textColor="@color/white"
        android:textSize="15sp" />
    
    <TextView
       android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/main_ning_data" />
    
    </LinearLayout>
    
 <FrameLayout
      android:id="@+id/fl_people"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:layout_below="@id/ll_ning">

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:src="@drawable/people" />
  </FrameLayout>
    
  <LinearLayout
    
        android:id="@+id/ll_colin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/fl_people">
    
    <TextView
        android:id="@+id/tmp_main_colin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_colin"
        android:textColor="@color/white"
        android:textSize="15sp" />
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/main_colin_data"/>
    
    </LinearLayout>

  
  <RelativeLayout
        android:id="@+id/buttonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
  
      
    <Button
        android:id="@+id/bt_send_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_contact"
        android:background="@color/green"
        android:textColor="@color/white" />
    
    </RelativeLayout>

 

</RelativeLayout>